Fixed image to be full height to not go into overflow.

--- a/src/assets/css/featuredProjects.css
+++ b/src/assets/css/featuredProjects.css
@@ -2,8 +2,9 @@
     height: 500px;
 }
 
-.carousel-item img{
+.carousel-item img {
     width: 100%;
+    height: 100%;
 }
 
 .projects{
